# control_versiones

./: README.MD  pyproject.toml
src/proyecto_1/: config.py  main.py
src/proyecto_1/modules/: assistants.py  functions.py  loggers.py  paths.py
tests/: pytest.py
